# spank-plugins

./: .gitignore  .pylintrc  CITATION.bib  CONTRIBUTING.md  INSTALL.md  Makefile  README.md
commands/qrun/: Cargo.toml  README.md  rust-toolchain.toml
commands/qrun/da_rust/: Cargo.toml
commands/qrun/da_rust/src/: client.rs
commands/qrun/da_rust/tests/: auth.rs
commands/qrun/daapi/: Cargo.toml  README.md
commands/qrun/daapi/app/: Cargo.toml
commands/qrun/daapi/src/: client.rs
commands/qrun/daapi/tests/: auth.rs  backends.rs  run_job.rs
commands/qrun/daapi_c/: Cargo.toml  Doxyfile  README.md  build.rs
commands/qrun/daapi_c/app/: CMakeLists.txt  README.md  conanfile.txt
commands/qrun/daapi_c/src/: client.rs  common.rs  consts.rs  lib.rs  s3.rs  uuid.rs
commands/qrun/pubs_gen/: README.md  gen_sampler_inputs.py
commands/qrun/qiskit_pubs_gen/: README.md  gen_estimator_inputs.py  gen_sampler_inputs.py  requirements.txt
commands/qrun/qrun/: Cargo.toml
commands/qrun/qrun/src/: main.rs
plugins/deprecated/spank_qrmi/: Cargo.toml  README.md
plugins/deprecated/spank_qrmi/src/: lib.rs  models.rs
plugins/skeleton/: CMakeLists.txt  README.md  spank_skeleton.c
plugins/skeleton_rust/: Cargo.toml  README.md
plugins/skeleton_rust/src/: lib.rs
plugins/spank_ibm_qrun/: CMakeLists.txt  README.md  spank_ibm_qrun.c
plugins/spank_qrmi/: CMakeLists.txt  Cargo.toml  README.md  buf.c  buf.h  plugstack.conf.example  qrmi_config.json.example  spank_qrmi.c  spank_qrmi.h  strbuf.c  strbuf.h
plugins/spank_qrmi/src/: lib.rs  models.rs
plugins/spank_qrmi/src/models/: config.rs
plugins/spank_qrmi_supp/: CMakeLists.txt  README.md  spank_qrmi_supp.c
plugins/tests/metadata/: CMakeLists.txt  README.md  test.c
plugins/tests/metadata/src/: test.c
qrmi/: Cargo.toml  Doxyfile  README.md  build.rs  cbindgen.toml  pyproject.toml  requirements-dev.txt  rust-toolchain.toml
qrmi.deprecated/dependencies/direct_access_client/app/: Cargo.toml  README.md
qrmi.deprecated/dependencies/pasqal_cloud_client/: Cargo.toml
qrmi.deprecated/dependencies/pasqal_cloud_client/src/: lib.rs
qrmi.deprecated/dependencies/qiskit_runtime_client/: Cargo.toml
qrmi.deprecated/dependencies/qiskit_runtime_client/docs/: AccountsApi.md  BackendsResponseV2DevicesInnerClops.md  BackendsResponseV2DevicesInnerPerformanceMetricsTwoQErrorLayered.md  CreateJobRequest.md  CreateJobRequestOneOf1.md  CreateSessionRequestOneOf1.md  GetInstance200Response.md  InstancesApi.md  JobMetricsTimestamps.md  JobMetricsUsage.md  JobResponse.md  JobResponseProgram.md  ListBackends200Response.md  ListJobs400ResponseErrorsInner.md  RemoteStorageLogs.md  UpdateSessionStateRequest.md
qrmi.deprecated/dependencies/qiskit_runtime_client/src/: lib.rs
qrmi/dependencies/direct_access_client/: Cargo.toml  README.md
qrmi/dependencies/direct_access_client/src/: api.rs  client.rs  lib.rs  middleware.rs  models.rs  storages.rs
qrmi/dependencies/direct_access_client/tests/: auth.rs  common.rs  jobs.rs  misc.rs  version.rs
qrmi/dependencies/pasqal_cloud_client/: README.md
qrmi/dependencies/pasqal_cloud_client/src/: client.rs  lib.rs  models.rs
qrmi/dependencies/qiskit_runtime_client/: README.md
qrmi/dependencies/qiskit_runtime_client/.openapi-generator/: FILES
qrmi/dependencies/qiskit_runtime_client/docs/: AnalyticsApi.md  AnalyticsFilters200Response.md  AnalyticsFilters200ResponseBackendsInner.md  AnalyticsFilters200ResponseInstancesInner.md  AnalyticsFilters200ResponseUsersInner.md  AnalyticsUsage200Response.md  BackendStatusResponse.md  BackendsApi.md  BackendsResponseV2.md  BackendsResponseV2DevicesInner.md  BackendsResponseV2DevicesInnerPerformanceMetrics.md  BackendsResponseV2DevicesInnerPerformanceMetricsTwoQErrorBest.md  BackendsResponseV2DevicesInnerProcessorType.md  BackendsResponseV2DevicesInnerStatus.md  CreateJob200Response.md  CreateJobRequestOneOf.md  CreateSession200Response.md  CreateSession200ResponseTimestampsInner.md  CreateSessionRequest.md  CreateSessionRequestOneOf.md  FindInstanceWorkloads200Response.md  FindInstanceWorkloads200ResponseNext.md  FindInstanceWorkloads200ResponsePrevious.md  FindInstanceWorkloads200ResponseWorkloadsInner.md  FindInstanceWorkloads401Response.md  FindInstanceWorkloads401ResponseErrorsInner.md  GetAccountConfig200Response.md  GetAccountConfig200ResponsePlansInner.md  GetInstanceConfiguration200Response.md  GetUsageAnalyticsGrouped200Response.md  GetUsageAnalyticsGrouped200ResponseDataInner.md  GetUsageAnalyticsGroupedByDate200Response.md  GetUsageAnalyticsGroupedByDate200ResponseDataInner.md  JobMetrics.md  JobMetricsBss.md  JobResponseRemoteStorage.md  JobResponseRemoteStorageAllOfAllOfOneOf.md  JobState.md  JobsApi.md  JobsResponse.md  (+14 more)
qrmi/examples/: README.md
qrmi/examples/c/: CMakeLists.txt  README.md
qrmi/examples/c/direct_access/: CMakeLists.txt  README.md
qrmi/examples/c/pasqal_cloud/: CMakeLists.txt  README.md
qrmi/examples/c/qiskit_runtime_service/: CMakeLists.txt  README.md
qrmi/examples/c/src/: direct_access.c
qrmi/examples/pulser_backend/pasqal/: pulser_backend.py  requirements.txt  target.py
qrmi/examples/python/: README.md
qrmi/examples/python/direct_access/: README.md  example.py
qrmi/examples/python/pasqal_cloud/: README.md  example.py  pulser_seq.json
qrmi/examples/python/qiskit_runtime_service/: README.md  epilog.sh  example.py  prolog.sh
qrmi/examples/qiskit_primitives/ibm/: README.md  estimator.py  sampler.py  target.py
qrmi/examples/qiskit_primitives/pasqal/: sampler.py
qrmi/examples/qrmi/python/: README.md
qrmi/examples/qrmi/rust/: Cargo.toml  rust-toolchain.toml
qrmi/examples/rust/: Cargo.toml  README.md
qrmi/examples/rust/direct_access/: Cargo.toml  README.md
qrmi/examples/rust/pasqal_cloud/: Cargo.toml  README.md
qrmi/python/qrmi/: __init__.py
qrmi/src/: cext.rs  common.rs  consts.rs  ibm.rs  lib.rs  models.rs  pasqal.rs  pyext.rs
qrmi/src/ibm/: direct_access.rs  qiskit_runtime_service.rs
qrmi/src/models/: config.rs  payload.rs  target.rs  task_result.rs  task_status.rs
qrmi/src/pasqal/: cloud.rs
(+426 files in other folders)
