[package]
name = "qrmi"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/qiskit-community/spank-plugins"
rust-version = "1.85.1" # Keep in sync with docs/client/*.md and rust-toolchain.toml.

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = []

[dependencies]
env_logger = "0.11.5"
log = "0.4.26"
anyhow = { version = "1.0.97", features = ["backtrace"] }
pyo3 = { version = "0.24.0", features = ["anyhow"] }

[workspace]
