[workspace]
members = [
    "daapi",
    "qrun",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Qiskit/direct-access-client"
rust-version = "1.84.0" # Keep in sync with docs/client/*.md and rust-toolchain.toml.

[workspace.dependencies]
direct-access-api = { path = "daapi", features = ["ibmcloud_appid_auth"] }
