[package]
name = "spank-rust-skeleton"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Skeleton Code(Example) of SPANK Plugin"
keywords = [
    "slurm",
    "slurm-job-scheduler",
    "slurm-workload-manager",
    "plugins",
    "spank",
    "rust"
]
readme = "README.md"
repository = "https://github.com/qiskit-community/spank-plugins"
authors = ["IBM Quantum <qiskit@us.ibm.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.8"
libc = "0.2.172"
slurm-spank = "0.4"
tracing = "0.1.37"
