[package]
name = "spank-qrmi"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.8"
libc = "0.2.172"
slurm-spank = "0.4"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrmi = { path = "../../qrmi" }
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.21.3"
