[package]
name = "direct-access-capi"
version = "0.1.0"
edition = "2021"

[lib]
name = "direct_access_capi"
doctest = false
crate-type = ["staticlib"]

[features]
default = ["ibmcloud_appid_auth", "internal_shared_key_auth"]
ibmcloud_appid_auth = ["direct-access-api/ibmcloud_appid_auth"]
internal_shared_key_auth = ["direct-access-api/internal_shared_key_auth"]
api_version = ["direct-access-api/api_version"]

[dependencies]
anyhow = "1.0.92"
direct-access-api = { workspace = true }
retry-policies = "0.4.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
serde_json = "1.0"
libc = "0.2.169"
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
ffi_helpers = "0.3.0"

[build-dependencies]
cbindgen = "0.26"
