[package]
name = "qrun"
version = "0.1.0"
edition = "2021"

[features]
default = ["ibmcloud_appid_auth"]
ibmcloud_appid_auth = []

[dependencies]
direct-access-api = { workspace = true }
retry-policies = "0.4.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
serde_json = "1.0"
libc = "0.2.169"
