[package]
name = "pasqal-cloud-api"
keywords = ["rest-api", "http-client", "api-bindings"]
description = "Pasqal Cloud API client library for Rust"
repository.workspace = true
license.workspace = true
rust-version.workspace = true
version = "0.0.1"
edition.workspace = true

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
reqwest = { version = "=0.12.12", features = ["json"] }
thiserror = "1.0.64"
retry-policies = "0.4.0"
chrono = "0.4.38"
async-trait = "0.1.83"
http = "1.1.0"
reqwest-middleware = { version = "0.3.3", features = ["json"] }
reqwest-retry = "0.6.1"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rhexdump = "0.2.0"
base64 = "0.22.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
crypto-common = "0.1.6"
digest = "0.10.7"
hmac = "0.12.1"
jwt = "0.16.0"
mockito = "1.5.0"
sha2 = "0.10.8"
